# StatsTelegramChannels

./: .gitignore  README.MD  README.md  advanced_metrics.py  app.py  bot.py  bot_session.session  channels.txt  google_sheets.py  main.py  metrics_calculator.py  pyproject.toml  requirements.txt  session.session  session_name.session  session_streamlit.session  session_streamlit.session-journal  streamlit_session.session  telegram_utils.py
bot/: config.py  loader.py  main.py
bot/handlers/: admin.py  analyze.py  base.py  payments.py  stats.py
bot/services/: analyzer.py
bot/utils/: formatters.py
database/: db.py
storage/: database.db
telegramstats.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
